--- a/css/nav.css
+++ b/css/nav.css
@@ -32,10 +32,10 @@
         height: 100%;
     }
     .main-logo {
-        width: 80%;
+        width: 77%;
     }
     .main-nav-links {
-        width: 20%;
+        width: 23%;
     }
     .main-titel {
         padding-left: 20px;
@@ -47,8 +47,10 @@
     .nav-link:hover {
         border-bottom: 2px solid white;
     }
-    }
-    .nav-link-work:hover {
-        border-bottom: 2px solid white;
-    }
+}
+
+.nav-link-work:hover {
+    border-bottom: 2px solid white;
+}
+
 }
